<resources>
    <string name="app_name">BacaData</string>
    <string name="nama">Nama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="data_member">Data Member</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="lihat_data">Lihat Data</string>
</resources>